Add flying press

--- a/main.css
+++ b/main.css
@@ -122,6 +122,10 @@ h2 {
     transition: opacity .4s
 }
 
+.larger-type-icon {
+    width: 82px;
+}
+
 .type-icon:active,
 .type-icon:focus,
 .type-icon:hover {
@@ -205,6 +209,11 @@ h2 {
 
 .type-fairy {
     background-color: #e9e
+}
+
+.type-flying_press {
+    background: linear-gradient(to bottom right, #b54 50%, #89f 50%);
+    border-color: #964436 #6d7acc #6d7acc #964436;
 }
 
 #comboResult {
